# Classical-Mechanics

./: .ghci  AD.hs  AD2.hs  AdditiveGroup.hs  Basis.hs  Classical-Mechanics.cabal  ClassicalMechanics.hs  Differentiation.hs  Enumerable.hs  Expr.hs  HCMTools.cabal  InnerSpace.hs  Integration.hs  Iso.hs  Latex.hs  LinearMap.hs  Optimization.hs  README.md  RootFinding.hs  Simplify.hs  Symbolic.hs  Trio.hs  Vector2.hs  Vector3.hs  VectorSpace.hs  circle.yml  stack.yaml
src/: HCMUtils.hs
src/HCMUtils/: AD.hs  AD2.hs  AdditiveGroup.hs  Basis.hs  ClassicalMechanics.hs  Differentiation.hs  Enumerable.hs  Expr.hs  InnerSpace.hs  Integration.hs  Iso.hs  Latex.hs  LinearMap.hs  Optimization.hs  RootFinding.hs  Trio.hs  Vector2.hs  Vector3.hs  VectorSpace.hs
test/: Chapter1.hs  ClassicalMechanics.hs
