name:                Classical-Mechanics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Classical-Mechanics#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HCMUtils
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.6.0.0
                     , hmatrix >= 0.18.0.0 && < 0.19.0.0
                     , hmatrix-gsl >= 0.18.0.1 && < 0.19.0.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Classical-Mechanics
