name:                Classical-Mechanics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Classical-Mechanics#readme
author:              Chris Taylor
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HCMUtils
                     , HCMUtils.Expr
                     , HCMUtils.AD
                     , HCMUtils.AD2
                     , HCMUtils.AdditiveGroup
                     , HCMUtils.Differentiation
                     , HCMUtils.Enumerable
                     , HCMUtils.Integration
                     , HCMUtils.Iso
                     , HCMUtils.Latex
                     , HCMUtils.LinearMap
                     , HCMUtils.Optimization
                     , HCMUtils.Basis
                     , HCMUtils.VectorSpace
                     , HCMUtils.InnerSpace
                     , HCMUtils.RootFinding
                     , HCMUtils.Trio
                     , HCMUtils.Vector2
                     , HCMUtils.Vector3
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1 && < 0.6.0.0
                     , hmatrix >= 0.18.0.0 && < 0.19.0.0
                     , hmatrix-gsl >= 0.18.0.1 && < 0.19.0.0
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ClassicalMechanics.hs
  build-depends:       base >= 4.7 && < 5
                     , Classical-Mechanics >= 0.1.0.0 && < 0.2.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Classical-Mechanics
